==> mikee47/HardwareSPI/Controller.cpp <==
#include <HSPI/Controller.h>
#include <HSPI/Device.h>
#include <esp_clk.h>
#include <esp_systemapi.h>
#include <espinc/spi_register.h>
#include <espinc/spi_struct.h>
#include <espinc/pin_mux_register.h>
#include <Platform/Timers.h>
#define PIN_HSPI_MISO 12
#define PIN_HSPI_MOSI 13
#define PIN_HSPI_CLK 14
#define PIN_HSPI_CS0 15
#define PIN_SPI_CS1 1
#define PIN_SPI_CS2 0
#define DPORT_SPI_INT_STATUS_REG 0x3ff00020
#define DPORT_SPI_INT_STATUS_SPI0 BIT4
#define DPORT_SPI_INT_STATUS_SPI1 BIT7
#define PIN_ISR_TEST 4
#define TESTPIN_HIGH()
#define TESTPIN_LOW()
#define TESTPIN_TOGGLE() GPO ^= BIT(PIN_ISR_TEST)
#define TESTPIN_HIGH()
#define TESTPIN_LOW()
#define TESTPIN_TOGGLE()
#define SPI_BUFSIZE sizeof(SPI1.data_buf)

void Controller::begin()
{
	// Pinset and chip selects are device-dependent and not initialised here - see startPacket()

	// Configure interrupts

	//	debug_i("SPI0.slave = 0x%08x", SPI0.slave.val);
	SPI0.slave.val &= ~0x000003FF; // Don't want interrupts from SPI0

	SPI1.slave.val &= ~0x000003FF; // Clear all interrupt sources
	SPI1.slave.trans_inten = 1;	// Interrupt on command completion

	SPI1.slave.slave_mode = false;
	SPI1.slave.sync_reset = true;

	// For testing, we'll be toggling a pin
#ifdef SPI_ENABLE_TEST_PIN
	GPIO_OUTPUT_SET(PIN_ISR_TEST, 0);
#endif

	ETS_SPI_INTR_ATTACH(ets_isr_t(isr), this);
	ETS_SPI_INTR_ENABLE();
}

bool Controller::startDevice(Device& dev, PinSet pinSet, uint8_t chipSelect)
{
	if(dev.pinSet != PinSet::None) {
		debug_e("SPI device already started at %u, CS #%u", unsigned(dev.pinSet), dev.chipSelect);
		return false;
	}

	auto csMax = (pinSet == PinSet::Overlap) ? 2 : 0;
	if(chipSelect > csMax) {
		debug_e("SPI pinSet %u, CS #%u invalid", unsigned(pinSet), chipSelect);
		return false;
	}

	if(chipSelectsInUse[chipSelect]) {
		debug_e("SPI CS #%u in use", chipSelect);
		return false;
	}

	switch(pinSet) {
	case PinSet::Overlap:
		if(overlapDevices++ == 0) {
			// From ESP32 code: 'we do need at least one clock of hold time in most cases'
			spi_dev_t::ctrl2_t ctrl2{};
			//			ctrl2.miso_delay_mode = 3;
			//			ctrl2.miso_delay_num = 4;
			//			ctrl2.mosi_delay_mode = 3;
			//			ctrl2.mosi_delay_num = 4;
			//			ctrl2.cs_delay_mode = 1;
			//			ctrl2.cs_delay_num = 4;
			SPI1.ctrl2.val = ctrl2.val;
		}
		break;

	case PinSet::Normal:
		if(normalDevices++ == 0) {
			PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_HSPI_MISO), FUNC_HSPIQ_MISO);
			PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_HSPI_MOSI), FUNC_HSPID_MOSI);
			PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_HSPI_CLK), FUNC_HSPI_CLK);
		}
		break;

	case PinSet::None:
	default:
		return false;
	}

	// Enable Hardware CS
	switch(chipSelect) {
	case 0:
		PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_HSPI_CS0), FUNC_HSPI_CS0);
		break;
	case 1:
		PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_SPI_CS1), FUNC_SPICS1);
		break;
	case 2:
		PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_SPI_CS2), FUNC_SPICS2);
		break;
	}

	dev.pinSet = pinSet;
	dev.chipSelect = chipSelect;
	chipSelectsInUse[chipSelect] = true;
	dev.config.dirty = true;

	debug_i("SPI pinSet %u, CS #%u acquired", unsigned(pinSet), chipSelect);
	return true;
}

void Controller::stopDevice(Device& dev)
{
	switch(dev.pinSet) {
	case PinSet::Overlap:
		assert(overlapDevices > 0);
		--overlapDevices;
		break;

	case PinSet::Normal:
		assert(normalDevices > 0);
		--normalDevices;
		if(normalDevices == 0) {
			// Set any configured pins to GPIO
			PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_HSPI_MISO), FUNC_GPIO12);
			PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_HSPI_MOSI), FUNC_GPIO13);
			PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_HSPI_CLK), FUNC_GPIO14);
		}

	case PinSet::None:
		return;

	default:
		assert(false);
	}

	auto cs = dev.chipSelect;
	switch(cs) {
	case 0:
		PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_HSPI_CS0), FUNC_GPIO15);
		break;
	case 1:
		PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_SPI_CS1), FUNC_GPIO1);
		break;
	case 2:
		PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(PIN_SPI_CS2), FUNC_GPIO0);
		break;
	default:
		assert(false);
	}

	debug_i("SPI pinSet %u, CS #%u released", dev.pinSet, cs);

	if(cs < chipSelectsInUse.size()) {
		chipSelectsInUse[cs] = false;
	}

	dev.pinSet = PinSet::None;
	dev.chipSelect = 255;
}

void Controller::execute(Request& req)
{
	req.next = nullptr;
	req.busy = 1;

	auto dev = req.device;
	if(dev->config.dirty) {
		updateConfig(*dev);
	}

	// Packet transfer already in progress?
	ETS_SPI_INTR_DISABLE();
	if(trans.busy) {
		// Tack new packet onto end of chain
		auto pkt = trans.request;
		while(pkt->next) {
			pkt = pkt->next;
		}
		pkt->next = &req;
	} else {
		// Not currently running, so do this one now
		trans.request = &req;
		startRequest();
	}

	// Use interrupts for asynchronous mode
	if(req.async) {
		ETS_SPI_INTR_ENABLE();
	} else {
		// Otherwise block and poll
		CpuCycleTimer timer;
		while(req.busy) {
			isr(this);
		}
		stats.waitCycles += timer.elapsedTicks();
	}
}

void IRAM_ATTR Controller::startRequest()
{
	TESTPIN_TOGGLE();

	auto& req = *trans.request;
	auto& dev = *req.device;

	auto pinSet = dev.pinSet;
	if(pinSet != activePinSet) {
		if(activePinSet == PinSet::Overlap) {
			// Disable HSPI overlap
			CLEAR_PERI_REG_MASK(HOST_INF_SEL, PERI_IO_CSPI_OVERLAP);
			// De-prioritise SPI vs HSPI
			SPI0.ext3.int_hold_ena = 0;
			SPI1.ext3.int_hold_ena = 0;
		}

		if(pinSet == PinSet::Overlap) {
			SET_PERI_REG_MASK(HOST_INF_SEL, PERI_IO_CSPI_OVERLAP);
			// Prioritise SPI over HSPI transactions
			SPI0.ext3.int_hold_ena = 1;
			SPI1.ext3.int_hold_ena = 3;
		}

		activePinSet = pinSet;
	}

	trans.bitOrder = dev.getBitOrder();

	auto& reg = dev.config.reg;
	SPI1.ctrl.val = reg.ctrl;
	SPI1.ctrl1.val = 0;
	SPI1.pin.val = reg.pin;
	SPI1.user.val = reg.user;

	// Clock
	auto clockReg = dev.getClockReg();
	auto ioMux = READ_PERI_REG(PERIPHS_IO_MUX_CONF_U);
	if(clockReg == SPI_CLK_EQU_SYSCLK) {
		ioMux |= SPI1_CLK_EQU_SYS_CLK;
	} else {
		ioMux &= ~SPI1_CLK_EQU_SYS_CLK;

		// In overlap mode, SPI0 sysclock selection overrides SPI1
		if(!flags.spi0ClockChanged && activePinSet == PinSet::Overlap) {
			if(ioMux & SPI0_CLK_EQU_SYS_CLK) {
				spi_dev_t::clock_t div2{{
					.clkcnt_l = 1,
					.clkcnt_h = 0,
					.clkcnt_n = 1,
					.clkdiv_pre = 0,
					.clk_equ_sysclk = 0,
				}};
				SPI0.clock.val = div2.val;
				ioMux &= ~SPI0_CLK_EQU_SYS_CLK;
				flags.spi0ClockChanged = true;
			}
		}
	}
	WRITE_PERI_REG(PERIPHS_IO_MUX_CONF_U, ioMux);
	SPI1.clock.val = clockReg;

	trans.addrOffset = 0;
	trans.outOffset = 0;
	trans.inOffset = 0;
	trans.inlen = 0;

	transfer();
}
